--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=8080
-MONGO_CONNECTION_URL=mongodb://localhost:27017/mydatabase
+MONGO_CONNECTION_URL=mongodb://localhost:27017
+MONGO_DATABASE_NAME=mydatabase
